# Digital-Clock

./: .gitignore  ARCHITECTURE.md  README.md  digital_clock_docs.md  pyproject.toml
Schema/: README.md  pyclock-alarm.schema.json  pyclock-cli.schema.json  pyclock-config.schema.json  pyclock-session.schema.json  pyclock-state.schema.json  schema-index.json
Schema/examples/: alarm.example.json  config.example.toml  session.example.jsonl
scripts/: smoke_e2e.py
src/pyclock/: __init__.py  __main__.py  alarms.py  ansi.py  cli.py  commands.py  config.py  display.py  domain.py  exceptions.py  loop.py  mode_controller.py  paths.py  renderers.py  sessions.py  time_sources.py  timer_runner.py
tests/: test_alarms.py  test_cli.py  test_commands.py  test_duration.py  test_loop_integration.py  test_renderers.py  test_time_sources.py
